--- a/product.html
+++ b/product.html
@@ -184,7 +184,7 @@ footer > span {
     <h2> Handcrafted, home-made masterpieces</h2>
   <form id="form">
     <input type="email" placeholder="Enter your email address" required><br><br>
-    <input type="submit" value="get started" url="https://www.freecodecamp.com/email-submit">
+    <input type="submit" value="get started" url="https://www.gmail.com/email-submit">
     </div>
   </form>
   <div class="container">
