--- a/product.html
+++ b/product.html
@@ -166,7 +166,7 @@ footer > span {
 <header id="header">
   <div class="flex-container">
       <div class="logo">
-      <img src="https://s3.amazonaws.com/freecodecamp/original_trombones.png" id="header-img" alt="logo">
+      <img src="https://github.com/swathicoding/fortm-img/blob/main/original_trombones.png?raw=true" alt="logo">
       </div>
      <div>
        <nav id="nav-bar">
